2eme ajout de contenu dans frontend.html uniquement pour essai et pratique, encore directement depuis vim

--- a/frontend.html
+++ b/frontend.html
@@ -1,6 +1,3 @@
 <h1>Recette de la salade nicoise<h1>
-		
-
-
-
+		<p>il y'a de nombreux ingredients dans cette salade, le riz, le thon deja c'est sur. pour le reste je dois verifier<p>
 
